--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>yu-java.github.io</title>
+    <title>yu-java</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages yu-java</p>
+    <h1>yu-java</h1>
+    <p>I'm hosted with GitHub Pages</p>
   </body>
 </html>
