--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
     <title>yu-java</title>
   </head>
+  
   <body>
-    <h1>yu-java</h1>
-    <p>I'm hosted with GitHub Pages</p>
+
+<table border="0">
+  <tr>
+    <td><a href="https://yu-2023.github.io/yu-java" target="_blank"><img src="screen/JAV_10_tabs.jpg"></a></td>
+  </tr>
+</table>
+
   </body>
+  
 </html>
