--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <table border="0">
   <tr>
-    <td><a><img src="screen/JAV_10_tabs.jpg"></a></td>
+    <td><a href="http://localhost:8080/JAVA_01-10/jav10tabs" target="_blank"><img src="screen/JAV_10_tabs.jpg"></a></td>
   </tr>
 </table>
 
