--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   
   <body>
 
+  <h1>yu-java</h1>
+
 <table border="0">
   <tr>
     <td><a href="http://localhost:8080/JAVA_01-10/jav10tabs" target="_blank"><img src="screen/JAV_10_tabs.jpg"></a></td>
